alot of changes and the image

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
             border-left: 5px solid #b30000;
         }
         .services img {
-            max-width: 100%;
+            width: 15%;
+            columns: 300px;
+            padding: 30px;
             height: auto;
-            border-radius: 10px;
+            border-radius: 10%;
             margin-bottom: 1rem;
         }
         .contact-info {
@@ -97,23 +99,23 @@
     <section id="services" class="section">
         <h2>Our Services</h2>
         <div class="services">
-            <h3>Live Birds</h3>
+            <h3>Live Birds :</h3>
             <p>We offer a long range of live birds from broilers to cockerel, layers and even live turkeys!!! </p>
           <section>
-           <strong>Broilers</strong>
+           <strong>Broilers :</strong>
             <img src="broiler.jpeg" alt="white broiler">
             <img src="broiler2.jpeg" alt="another broiler">
           </section>
           <section>
-            <strong>Cockerel</strong>
+            <strong>Cockerel :</strong>
             <img src="cockerel.jpeg" alt="cock">
             <img src="cockerel2.jpeg" alt="anothercock">
           </section>
           <section>
-            <strong>Turkey</strong>
+            <strong>Turkey :</strong>
             <img src="turk.jpeg" alt="turkey">
           </section>
-            <h3>Frozen Chicken</h3>
+            <h3>Frozen Chicken :</h3>
             <p>High-quality frozen chicken products to suit your needs.</p>
           <section>
             <strong>Full chicken or Cut Four</strong>
