--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
             border-radius: 10%;
             margin-bottom: 1rem;
         }
+        .services h3{
+            text-align: center;
+            font-size: x-large;
+        }
+        .services p{
+            text-align: center;
+            font-size: x-large;
+        }
         .contact-info {
             margin-top: 2rem;
         }
@@ -118,13 +126,13 @@
             <h3>Frozen Chicken :</h3>
             <p>High-quality frozen chicken products to suit your needs.</p>
           <section>
-            <strong>Full chicken or Cut Four</strong>
+            <strong>Full chicken or Cut Four :</strong>
             <img src="chk.jpeg" alt="chicken">
             <img src="chk2.jpeg" alt="chicken">
             <img src="chk3.jpeg" alt="chicken">
            </section>
            <section>
-            <strong>Heads,Feets,Gizzard</strong>
+            <strong>Heads,Feets,Gizzard :</strong>
             <img src="leg.jpeg" alt="legs">
             <img src="gizzard 2.jpg" alt="Gizzard">
             <img src="gizzard.jpg" alt="Gizzard">
