media queries fro tentos web

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             border-left: 5px solid #b30000;
         }
         .services img {
-            width: 15%;
+            width: 20%;
             columns: 300px;
             padding: 30px;
             height: auto;
@@ -84,6 +84,12 @@
         }
         .contact-info {
             margin-top: 2rem;
+        }
+        @media only screen and  (max-width: 600px) {
+            .services img{
+                width: 200px;
+                height: 200px;
+            }
         }
     </style>
 </head>
