changed the link for instagram

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="social-media">
             <h3>Follow Us:</h3>
             <a href="https://wa.me/2348122914250?text=Hi%2C%20I%20have%20a%20question!" target="_blank" style="text-decoration: none; background-color: #25D366; color: white; padding: 10px 20px; border-radius: 5px; font-family: Arial, sans-serif;">Contact us on WhatsApp</a>
-            |<a href="https://instagram.com/manlikeholly" target="_blank" style="text-decoration: none; background-color: #E4405F; color: white; padding: 10px 20px; border-radius: 5px; font-family: Arial, sans-serif; display: inline-flex; align-items: center; gap: 10px;">
+            |<a href="https://www.instagram.com/teey_hmd?igsh=dWprOXlwazZqaDR0" target="_blank" style="text-decoration: none; background-color: #E4405F; color: white; padding: 10px 20px; border-radius: 5px; font-family: Arial, sans-serif; display: inline-flex; align-items: center; gap: 10px;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
                 Follow us on Instagram
             </a>
